finish basic markdown

--- a/index.html
+++ b/index.html
@@ -6,6 +6,93 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <header>
+      <h1>John Doe</h1>
+      <h2>Frontend Developer</h2>
+    </header>
+    <div>
+      <main>
+        <section>
+          <h3>About Me</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni
+            iusto placeat facilis iste velit non.
+          </p>
+        </section>
+        <section>
+          <h3>Projects</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            autem aperiam laborum adipisci. Ipsa, repellendus ut.
+          </p>
+        </section>
+        <section>
+          <h3>Skills</h3>
+          <h4>Frontend</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+            <li>TS</li>
+            <li>Tailwind</li>
+          </ul>
+          <h4>Backend</h4>
+          <ul>
+            <li>Node.js</li>
+            <li>SQL</li>
+            <li>Linux</li>
+          </ul>
+        </section>
+        <section>
+          <h4>Interests</h4>
+          <ul>
+            <li>lorem</li>
+            <li>ipsum</li>
+            <li>dolor</li>
+          </ul>
+        </section>
+      </main>
+      <!-- yeah, I know it's not really aside, but whatever :p -->
+      <aside>
+        <div>
+          <!-- img placeholder -->
+        </div>
+        <section>
+          <h3>Personal Details</h3>
+          <ul>
+            <li>Location</li>
+            <li>Phone Number</li>
+            <li>kolaczyn.com</li>
+            <li>github</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Education</h3>
+          <p>TODO</p>
+        </section>
+        <section>
+          <h3>Foreign Languages</h3>
+          <ul>
+            <li>English</li>
+            <li>Japanese</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Courses</h3>
+          <ul>
+            <li>course 1</li>
+            <li>course 2</li>
+            <li>course 3</li>
+          </ul>
+        </section>
+        <section>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Accusantium expedita a, consequuntur ratione vitae, unde deleniti
+            molestiae sed qui repellat repudiandae tempora est porro ut.
+          </p>
+        </section>
+      </aside>
+    </div>
   </body>
 </html>
