--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <header>
-      <h1>John Doe</h1>
-      <h2>Frontend Developer</h2>
+  <body class="flex flex-col min-h-screen">
+    <header class="bg-zinc-900 text-white p-4">
+      <h1 class="font-bold text-3xl">John Doe</h1>
+      <h2 class="uppercase tracking-widest font-light">Frontend Developer</h2>
     </header>
-    <div>
-      <main>
+    <div class="flex flex-1">
+      <main class="p-4">
         <section>
-          <h3>About Me</h3>
+          <h3 class="font-bold text-2xl">About Me</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni
             iusto placeat facilis iste velit non.
           </p>
         </section>
         <section>
-          <h3>Projects</h3>
+          <h3 class="font-bold text-2xl">Projects</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
             autem aperiam laborum adipisci. Ipsa, repellendus ut.
           </p>
         </section>
         <section>
-          <h3>Skills</h3>
+          <h3 class="font-bold text-2xl">Skills</h3>
           <h4>Frontend</h4>
           <ul>
             <li>HTML</li>
@@ -53,12 +53,12 @@
         </section>
       </main>
       <!-- yeah, I know it's not really aside, but whatever :p -->
-      <aside>
+      <aside class="bg-slate-300 p-4">
         <div>
           <!-- img placeholder -->
         </div>
         <section>
-          <h3>Personal Details</h3>
+          <h3 class="font-bold text-2xl">Personal Details</h3>
           <ul>
             <li>Location</li>
             <li>Phone Number</li>
@@ -67,18 +67,18 @@
           </ul>
         </section>
         <section>
-          <h3>Education</h3>
+          <h3 class="font-bold text-2xl">Education</h3>
           <p>TODO</p>
         </section>
         <section>
-          <h3>Foreign Languages</h3>
+          <h3 class="font-bold text-2xl">Foreign Languages</h3>
           <ul>
             <li>English</li>
             <li>Japanese</li>
           </ul>
         </section>
         <section>
-          <h3>Courses</h3>
+          <h3 class="font-bold text-2xl">Courses</h3>
           <ul>
             <li>course 1</li>
             <li>course 2</li>
